# HEP

./: .gitignore  CLAUDE.md  README.md  example_evolution.py  example_visualization.py  mkdocs.yml  pyproject.toml  run_benchmark.py
benchmarks/: __init__.py  analysis.py  benchmark_1_baselines.py  benchmark_2_fe_methods.py  benchmark_3_ablation.py  config.py  datasets.py  hep_wrapper.py  profiler.py  reporting.py  run_all.py
docs/: architecture.md  guide.md  index.md  operators.md  theory.md
docs/api/: core.md  evolution.md  visualization.md
fedot_hep/api/: __init__.py  registration.py
fedot_hep/benchmark/: benchmark.py
fedot_hep/core/: adapter.py  structure.py  verification.py
fedot_hep/evolution/: crossover.py  mutation.py
fedot_hep/tests/: test_evolution.py  test_integration.py  test_operation.py  test_structure.py
fedot_hep/visualization/: __init__.py  hep_explainer.py
fedot_hep/web/: operation.py  strategy.py
hep_engine/: __init__.py  core.py  evaluator.py  evolution.py  optimizer.py  tracker.py  visualizer.py
notebooks/: hep_showcase.ipynb  hep_showcase.py  make_animation.py
tests/: test_core.py  test_engine.py  test_evolution.py
