[tool.poetry]
name = "fedot-hep"
version = "0.1.0"
description = "Hypergraph-Evolved Pipelines (HEP) extension for FEDOT framework"
readme = "README.md"
packages = [{include = "fedot_hep"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.20"
scipy = ">=1.7,<1.13"
fedot = ">=0.7.3"
setuptools = "<70"
pandas = "^1.3"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.5.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
griffe = ">=0.48.0,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
