[tool.poetry]
name = "standalone-hep"
version = "0.1.0"
description = "Hypergraph Evolution for Pipelines (Standalone)"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
scikit-learn = "^1.0.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
networkx = "^2.6.0"
hypernetx = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
